--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -1,10 +1,9 @@
-.App{
-  width: 100vw;
-  height: 100vh;
+.App #root{
+  height: 100%;
 }
 
 body{
-
+  height: 100%;
   margin:0;
   padding:0;
 }
