--- a/Frontend/src/Pages/Home.css
+++ b/Frontend/src/Pages/Home.css
@@ -2,10 +2,10 @@
 {
     
         display: inline-block;
-        height: 90vh;
+        height: 100%;
         width:80%;
         align-items: center;
         justify-content: center;
-        font-size: 3rem;
+     
       
 }
