--- a/Frontend/src/Pages/PatientAtRisk.css
+++ b/Frontend/src/Pages/PatientAtRisk.css
@@ -2,7 +2,7 @@
 {
     
         display: flex;
-        height: 90vh;
+        height: 100%;
         align-items: center;
         justify-content: center;
         font-size: 3rem;
